[tool.poetry]
name = "takietam"
version = "0.1.0"
description = ""
authors = ["shadeofblue <blue@wave460.net>"]

[tool.poetry.dependencies]
python = "^3.9"
attrs = "^21.2.0"
aiostream = "^0.4.4"
mypy = "^0.920"
aiohttp = "^3.8.3"
aiofiles = "^22.1.0"
numba = "^0.59.0"
ansicolors = "^1.1.8"
asciimatics = "^1.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
